--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -105,3 +105,158 @@ modules:
         url: https://github.com/google/go-licenses
         commit: ceb292363ec84358c9a276ef23aa0de893e59b84
         dest: vendor/github.com/google/go-licenses
+      - type: git
+        url: https://github.com/google/licenseclassifier
+        commit: 3043a050f148a588e7e0c84dce27579dfe17fd2d
+        dest: vendor/github.com/google/licenseclassifier
+      - type: git
+        url: https://github.com/hajimehoshi/ebiten
+        tag: v2.2.2
+        commit: 97af84c32a2fab6c151559e58379c7746c2cf2ab
+        dest: vendor/github.com/hajimehoshi/ebiten/v2
+      - type: git
+        url: https://github.com/hajimehoshi/oto
+        tag: v2.1.0-alpha.4
+        commit: c22435daf0950bfadae39090b29ee5e9911a6768
+        dest: vendor/github.com/hajimehoshi/oto/v2
+      - type: git
+        url: https://github.com/inconshreveable/mousetrap
+        tag: v1.0.0
+        commit: 76626ae9c91c4f2a10f34cad8ce83ea42c93bb75
+        dest: vendor/github.com/inconshreveable/mousetrap
+      - type: git
+        url: https://github.com/jbenet/go-context
+        commit: d14ea06fba99483203c19d92cfcd13ebe73135f4
+        dest: vendor/github.com/jbenet/go-context
+      - type: git
+        url: https://github.com/jezek/xgb
+        commit: 0e0f116e1240ae19099324c3b2632003082841b7
+        dest: vendor/github.com/jezek/xgb
+      - type: git
+        url: https://github.com/jfreymuth/oggvorbis
+        tag: v1.0.3
+        commit: 16dc03daa4122c3925b8b7f0d5118156e45aa6e9
+        dest: vendor/github.com/jfreymuth/oggvorbis
+      - type: git
+        url: https://github.com/jfreymuth/vorbis
+        tag: v1.0.2
+        commit: 55da9865afe7a8953bee35bef04c240163786ccc
+        dest: vendor/github.com/jfreymuth/vorbis
+      - type: git
+        url: https://github.com/josephspurrier/goversioninfo
+        tag: v1.3.0
+        commit: a8878317895b8e0313246346e1a7d79ef833208c
+        dest: vendor/github.com/josephspurrier/goversioninfo
+      - type: git
+        url: https://github.com/kevinburke/ssh_config
+        commit: 01f96b0aa0cdcaa93f9495f89bbc6cb5a992ce6e
+        dest: vendor/github.com/kevinburke/ssh_config
+      - type: git
+        url: https://github.com/mitchellh/go-homedir
+        tag: v1.1.0
+        commit: af06845cf3004701891bf4fdb884bfe4920b3727
+        dest: vendor/github.com/mitchellh/go-homedir
+      - type: git
+        url: https://github.com/mitchellh/hashstructure
+        tag: v2.0.2
+        commit: a045b665615f739329536a58c25ca6327abf1ec1
+        dest: vendor/github.com/mitchellh/hashstructure/v2
+      - type: git
+        url: https://github.com/ncruces/zenity
+        tag: v0.7.12
+        commit: fca9f5c3cebf4cffb03a16ff323538cc100a2a99
+        dest: vendor/github.com/ncruces/zenity
+      - type: git
+        url: https://github.com/otiai10/copy
+        tag: v1.6.0
+        commit: edeb9f37d4d0c28725014fcab6635120197932a1
+        dest: vendor/github.com/otiai10/copy
+      - type: git
+        url: https://github.com/pkg/errors
+        tag: v0.9.1
+        commit: 614d223910a179a466c1767a985424175c39b465
+        dest: vendor/github.com/pkg/errors
+      - type: git
+        url: https://github.com/randall77/makefat
+        commit: 7ddd0e42c8442593c87c1705a5545099604008e5
+        dest: vendor/github.com/randall77/makefat
+      - type: git
+        url: https://github.com/sergi/go-diff
+        tag: v1.2.0
+        commit: b292a3123758b064eeaa3a5aa86df1adca0f4401
+        dest: vendor/github.com/sergi/go-diff
+      - type: git
+        url: https://github.com/spf13/cobra
+        tag: v0.0.5
+        commit: f2b07da1e2c38d5f12845a4f607e2e1018cbb1f5
+        dest: vendor/github.com/spf13/cobra
+      - type: git
+        url: https://github.com/spf13/pflag
+        tag: v1.0.5
+        commit: 2e9d26c8c37aae03e3f9d4e90b7116f5accb7cab
+        dest: vendor/github.com/spf13/pflag
+      - type: git
+        url: https://github.com/src-d/gcfg
+        tag: v1.4.0
+        commit: 1ac3a1ac202429a54835fe8408a92880156b489d
+        dest: vendor/github.com/src-d/gcfg
+      - type: git
+        url: https://github.com/xanzy/ssh-agent
+        tag: v0.2.1
+        commit: 6a3e2ff9e7c564f36873c2e36413f634534f1c44
+        dest: vendor/github.com/xanzy/ssh-agent
+      - type: git
+        url: https://go.googlesource.com/crypto
+        commit: 089bfa5675191fd96a44247682f76ebca03d7916
+        dest: vendor/golang.org/x/crypto
+      - type: git
+        url: https://go.googlesource.com/exp
+        commit: 8a230f1f7d7a4905d4551b473275e86e2aadfe86
+        dest: vendor/golang.org/x/exp
+      - type: git
+        url: https://go.googlesource.com/image
+        commit: 6944b10bf41077a939a283aba62be2c1a676d8ef
+        dest: vendor/golang.org/x/image
+      - type: git
+        url: https://go.googlesource.com/mobile
+        commit: d61a72f26a1aa0e53cd846e90f115dbbd20cd067
+        dest: vendor/golang.org/x/mobile
+      - type: git
+        url: https://go.googlesource.com/mod
+        commit: c96bc1413d570acfb16c7db96b4380cb508ae205
+        dest: vendor/golang.org/x/mod
+      - type: git
+        url: https://go.googlesource.com/net
+        commit: 4f30a5c0130f199e0dfd54e9de49f9367cabf1ad
+        dest: vendor/golang.org/x/net
+      - type: git
+        url: https://go.googlesource.com/sync
+        commit: 036812b2e83c0ddf193dd5a34e034151da389d09
+        dest: vendor/golang.org/x/sync
+      - type: git
+        url: https://go.googlesource.com/sys
+        commit: fe61309f888157de161a48facf03d9412635cffe
+        dest: vendor/golang.org/x/sys
+      - type: git
+        url: https://go.googlesource.com/tools
+        commit: d6a9af8af0233f67fad56942665eb392464c2321
+        dest: vendor/golang.org/x/tools
+      - type: git
+        url: https://go.googlesource.com/xerrors
+        commit: 5ec99f83aff198f5fbd629d6c8d8eb38a04218ca
+        dest: vendor/golang.org/x/xerrors
+      - type: git
+        url: https://gopkg.in/src-d/go-billy.v4
+        tag: v4.3.2
+        commit: 780403cfc1bc95ff4d07e7b26db40a6186c5326e
+        dest: vendor/gopkg.in/src-d/go-billy.v4
+      - type: git
+        url: https://gopkg.in/src-d/go-git.v4
+        tag: v4.13.1
+        commit: 0d1a009cbb604db18be960db5f1525b99a55d727
+        dest: vendor/gopkg.in/src-d/go-git.v4
+      - type: git
+        url: https://gopkg.in/warnings.v0
+        tag: v0.1.2
+        commit: ec4a0fea49c7b46c2aeb0b51aac55779c607e52b
+        dest: vendor/gopkg.in/warnings.v0
