--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -53,7 +53,9 @@ modules:
     sources:
       - type: git
         url: https://github.com/divVerent/aaaaxy
+        # --- TAG GOES HERE ---
         tag: v1.0.187+flatpak-1
+        # --- REV GOES HERE ---
         commit: 10f6be059be2fff8f5dc7bd6203b4a16d7e65717
         # Needed to allow querying the version during build.
         disable-shallow-clone: true
