--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -54,9 +54,9 @@ modules:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.1.6
+        tag: v1.1.31
         # --- REV GOES HERE ---
-        commit: abd1531e707df1c2a32a3f21dac70f53cb78b873
+        commit: c1235d17c75504da395c69c0512f68ca3757d412
         # Needed to allow querying the version during build.
         disable-shallow-clone: true
       - type: file
@@ -100,8 +100,8 @@ modules:
         dest: vendor/github.com/golang/glog
       - type: git
         url: https://github.com/google/go-cmp
-        tag: v0.5.6
-        commit: d103655696d8ae43c4125ee61454dbf03d8e8324
+        tag: v0.5.7
+        commit: 039e37cba1f3e52c48404633d6960421b369a19a
         dest: vendor/github.com/google/go-cmp
       - type: git
         url: https://github.com/google/go-licenses
@@ -153,6 +153,11 @@ modules:
         url: https://github.com/kevinburke/ssh_config
         commit: 01f96b0aa0cdcaa93f9495f89bbc6cb5a992ce6e
         dest: vendor/github.com/kevinburke/ssh_config
+      - type: git
+        url: https://github.com/lucasb-eyer/go-colorful
+        tag: v1.2.0
+        commit: d2b05a0d83cca9d610425691c3253d5f36d0ad06
+        dest: vendor/github.com/lucasb-eyer/go-colorful
       - type: git
         url: https://github.com/mitchellh/go-homedir
         tag: v1.1.0
@@ -213,7 +218,7 @@ modules:
         dest: vendor/golang.org/x/crypto
       - type: git
         url: https://go.googlesource.com/exp
-        commit: 9d54fb35363cf67f0e1d2566e19509673e97c236
+        commit: 7b334a16533f8c246a29e830921f71a7d549c08c
         dest: vendor/golang.org/x/exp
       - type: git
         url: https://go.googlesource.com/image
