--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -54,17 +54,17 @@ modules:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.1.166
+        tag: v1.1.189
         # --- REV GOES HERE ---
-        commit: a76fb881198640101498fcadf79da8e8a7b0979c
+        commit: 6e1c93b09e5a6ebd91c206bae671ce1c831051f0
       - type: file
         path: modules.txt
         dest: vendor
       # --- GO MODULES START HERE, USE go-vendor-to-flatpak-yml.sh TO UPDATE ---
       - type: git
         url: https://github.com/Microsoft/go-winio
-        tag: v0.5.1
-        commit: 6c24dfa01eb5906508a5ad06f4f6534a9be47456
+        tag: v0.5.2
+        commit: dfd7da8f92a382999d77b5d9cfe8cc6bec1894c6
         dest: vendor/github.com/Microsoft/go-winio
       - type: git
         url: https://github.com/adrg/xdg
@@ -78,7 +78,7 @@ modules:
         dest: vendor/github.com/akavel/rsrc
       - type: git
         url: https://github.com/dchest/jsmin
-        commit: faeced8839472f349011f4c4c5441bbc28d02191
+        commit: 59f39799265ff6981e96a8852719a4e5a9f4fd8d
         dest: vendor/github.com/dchest/jsmin
       - type: git
         url: https://github.com/emirpasic/gods
@@ -116,11 +116,12 @@ modules:
         dest: vendor/github.com/google/licenseclassifier
       - type: git
         url: https://github.com/hajimehoshi/ebiten
-        tag: v2.2.4
-        commit: 7f569f30714dcbe6c761725c5cfcb3813afc5155
+        tag: v2.2.5
+        commit: 6443af640115accec7b9a6f90ae579a53217688d
         dest: vendor/github.com/hajimehoshi/ebiten/v2
       - type: git
         url: https://github.com/hajimehoshi/oto
+        tag: v2.1.0-alpha.6
         commit: 539b6322111ac9156e96e60684e56f735429cb8d
         dest: vendor/github.com/hajimehoshi/oto/v2
       - type: git
@@ -134,7 +135,8 @@ modules:
         dest: vendor/github.com/jbenet/go-context
       - type: git
         url: https://github.com/jezek/xgb
-        commit: 0e0f116e1240ae19099324c3b2632003082841b7
+        tag: v1.0.0
+        commit: 7a4fade77cf2a8406e63409d11ac844dfb150679
         dest: vendor/github.com/jezek/xgb
       - type: git
         url: https://github.com/jfreymuth/oggvorbis
@@ -180,6 +182,11 @@ modules:
         tag: v1.6.0
         commit: edeb9f37d4d0c28725014fcab6635120197932a1
         dest: vendor/github.com/otiai10/copy
+      - type: git
+        url: https://github.com/pkg/errors
+        tag: v0.9.1
+        commit: 614d223910a179a466c1767a985424175c39b465
+        dest: vendor/github.com/pkg/errors
       - type: git
         url: https://github.com/randall77/makefat
         commit: 7ddd0e42c8442593c87c1705a5545099604008e5
