--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -33,9 +33,9 @@ modules:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.2.399
+        tag: v1.3.43
         # --- REV GOES HERE ---
-        commit: 9eca6604e06a7d2a9c0cd527a78b2677a2a42ab6
+        commit: d380982a36fa4550e0fd639c343ca386c2dc468b
       - type: file
         path: modules.txt
         dest: vendor
@@ -99,8 +99,8 @@ modules:
         dest: vendor/github.com/google/licenseclassifier
       - type: git
         url: https://github.com/hajimehoshi/ebiten
-        tag: v2.4.13
-        commit: 84dd1679e3c0ec6eeb7e8077d22ecaf57607be28
+        tag: v2.4.15
+        commit: b625cc84ce47787df0539b020bab6c6fc0f495b7
         dest: vendor/github.com/hajimehoshi/ebiten/v2
       - type: git
         url: https://github.com/hajimehoshi/file2byteslice
@@ -109,8 +109,8 @@ modules:
         dest: vendor/github.com/hajimehoshi/file2byteslice
       - type: git
         url: https://github.com/hajimehoshi/oto
-        tag: v2.4.0-alpha.7
-        commit: 9c1ccb7650eb9cbee811e7c2630b1856b006cd99
+        tag: v2.4.0-alpha.8
+        commit: 96a1006f3de7c109515d521d92cd21d11432d7a8
         dest: vendor/github.com/hajimehoshi/oto/v2
       - type: git
         url: https://github.com/inconshreveable/mousetrap
@@ -121,6 +121,10 @@ modules:
         url: https://github.com/jbenet/go-context
         commit: d14ea06fba99483203c19d92cfcd13ebe73135f4
         dest: vendor/github.com/jbenet/go-context
+      - type: git
+        url: https://github.com/jeandeaual/go-locale
+        commit: 7de61946b173ae2d8812fce85f620e2b8559c7d6
+        dest: vendor/github.com/jeandeaual/go-locale
       - type: git
         url: https://github.com/jezek/xgb
         tag: v1.1.0
@@ -146,6 +150,11 @@ modules:
         commit: 01f96b0aa0cdcaa93f9495f89bbc6cb5a992ce6e
         dest: vendor/github.com/kevinburke/ssh_config
       - type: git
+        url: https://github.com/leonelquinteros/gotext
+        tag: v1.5.0
+        commit: 1b8a993ae40a69bc9e9ed20a93b526c1e6b7d457
+        dest: vendor/github.com/leonelquinteros/gotext
+      - type: git
         url: https://github.com/lucasb-eyer/go-colorful
         tag: v1.2.0
         commit: d2b05a0d83cca9d610425691c3253d5f36d0ad06
@@ -162,19 +171,14 @@ modules:
         dest: vendor/github.com/mitchellh/hashstructure/v2
       - type: git
         url: https://github.com/ncruces/zenity
-        tag: v0.9.3
-        commit: c2da2ba9687466d71c9013ca565427f0d08bb452
+        tag: v0.10.4
+        commit: 66863de571628561da27b2e03ee5f310142f78d4
         dest: vendor/github.com/ncruces/zenity
       - type: git
         url: https://github.com/otiai10/copy
         tag: v1.6.0
         commit: edeb9f37d4d0c28725014fcab6635120197932a1
         dest: vendor/github.com/otiai10/copy
-      - type: git
-        url: https://github.com/pkg/errors
-        tag: v0.9.1
-        commit: 614d223910a179a466c1767a985424175c39b465
-        dest: vendor/github.com/pkg/errors
       - type: git
         url: https://github.com/randall77/makefat
         commit: 7ddd0e42c8442593c87c1705a5545099604008e5
@@ -215,8 +219,8 @@ modules:
         dest: vendor/golang.org/x/exp
       - type: git
         url: https://go.googlesource.com/image
-        tag: v0.1.0
-        commit: ffcb3fe7d1bf4ed2e01a95a552bb3b7f5dab24d1
+        tag: v0.2.0
+        commit: 9fdfde75ec58094fba748b489e465749dd8f7bb5
         dest: vendor/golang.org/x/image
       - type: git
         url: https://go.googlesource.com/mobile
@@ -229,18 +233,23 @@ modules:
         dest: vendor/golang.org/x/mod
       - type: git
         url: https://go.googlesource.com/net
-        tag: v0.2.0
-        commit: a2d827a3ef36ceeaf882d7d5a8f86579d104304a
+        tag: v0.3.0
+        commit: 3247b5b4f2e9df1a390dbb76f025ee291a142129
         dest: vendor/golang.org/x/net
       - type: git
         url: https://go.googlesource.com/sys
-        tag: v0.2.0
-        commit: fc697a31fa06b616162e34fd66047ab52722ba6c
+        tag: v0.3.0
+        commit: 3ca3b18c8b9bb09620854907cd3ea668c5bc6b52
         dest: vendor/golang.org/x/sys
       - type: git
+        url: https://go.googlesource.com/text
+        tag: v0.5.0
+        commit: c8236a6712b1b530895a7182a8a9fc06f1c5cf4e
+        dest: vendor/golang.org/x/text
+      - type: git
         url: https://go.googlesource.com/tools
-        tag: v0.3.0
-        commit: 502c634771c4ba335286d55fc24eeded1704f592
+        tag: v0.4.0
+        commit: aee3994bd5f840a71b7b3fd8ce9fa21176e0a9e1
         dest: vendor/golang.org/x/tools
       - type: git
         url: https://gopkg.in/src-d/go-billy.v4
