--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -33,9 +33,9 @@ modules:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.3.263
+        tag: v1.3.303
         # --- REV GOES HERE ---
-        commit: fe3e0f5e72d2c54d5dc457dc13f3ddbd4f8235cd
+        commit: 6a2be8052669df58409b40161aef923b53665402
       - type: file
         path: modules.txt
         dest: vendor
@@ -95,14 +95,9 @@ modules:
         dest: vendor/github.com/google/licenseclassifier
       - type: git
         url: https://github.com/hajimehoshi/ebiten
-        tag: v2.4.16
-        commit: 8c4b29ed1f493e9c5c9ba714b7d89686d6a16002
+        tag: v2.5.0-alpha.12
+        commit: 16e49e0499849782f331824119dd1314f5106e42
         dest: vendor/github.com/hajimehoshi/ebiten/v2
-      - type: git
-        url: https://github.com/hajimehoshi/file2byteslice
-        tag: v1.0.0
-        commit: 5340248a8f41cadf9b29ffa200f0e285ba3882ec
-        dest: vendor/github.com/hajimehoshi/file2byteslice
       - type: git
         url: https://github.com/hajimehoshi/oto
         tag: v2.4.0-alpha.12
@@ -205,6 +200,10 @@ modules:
         commit: 6a3e2ff9e7c564f36873c2e36413f634534f1c44
         dest: vendor/github.com/xanzy/ssh-agent
       - type: git
+        url: https://github.com/zachomedia/go-bdf
+        commit: a3af701111be3ca0aa69ec03bbe807a56ea28887
+        dest: vendor/github.com/zachomedia/go-bdf
+      - type: git
         url: https://go.googlesource.com/crypto
         tag: v0.1.0
         commit: 642fcc37f5043eadb2509c84b2769e729e7d27ef
@@ -233,9 +232,14 @@ modules:
         commit: 8e0e7d8d38f2b6d21d742845570dde2902d06a1d
         dest: vendor/golang.org/x/net
       - type: git
+        url: https://go.googlesource.com/sync
+        tag: v0.1.0
+        commit: 8fcdb60fdcc0539c5e357b2308249e4e752147f1
+        dest: vendor/golang.org/x/sync
+      - type: git
         url: https://go.googlesource.com/sys
-        tag: v0.4.0
-        commit: b60007cc4e6f966b1c542e343d026d06723e5653
+        tag: v0.5.0
+        commit: 90c8f94a055257f9ab343137cbada4e658750fbb
         dest: vendor/golang.org/x/sys
       - type: git
         url: https://go.googlesource.com/text
